[update]全体を書き直した

--- a/KROWL-coding-subject-001-Windows/index.html
+++ b/KROWL-coding-subject-001-Windows/index.html
@@ -4,38 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>廃 - before the time comes -</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/custom_reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="index">
-    <header>
-        <h1><span>廃</span> - before the time comes -</h1>
-        <img src="images/main_visual.jpg" alt="メインの廃墟">
+
+<body>
+    <header class="page-header">
+        <div class="page-header__inner common-inner">
+            <h1 class="page-header__logo">
+                <span class="large">廃</span><span class="small"> - before the time comes - </span>
+            </h1>
+        </div>
+        <div class="page-header__main-visual">
+            <img src="images/main_visual.jpg" alt="メインビジュアル">
+        </div>
     </header>
 
-    <div id="wrap", class="clearfix">
-        <div class="main">
-            <div class="clearfix">
-                <h2><span>8</span>月の探訪</h2>
-                <section>
-                    <img src="images/hokkaido.jpg" alt="北海道の廃墟">
-                    <p>北海道を旅行するのに最適な季節は8月をおいて他にない。<br>トウモロコシ畑はいよいよ隆盛を極め、今正にその旬を謳歌しようとしている。<br>そんな黄色の恵みを背に帯広から十数キロ北に車を走らせたところ、その場所は見えてきた。<br>一面に広がる緑には、おおよそ商業的農業としての役割を全うしているであろう空間は1ヘクタールも見つからない。<br>広大な庭の持ち主と、その隙間から覗く青空が伝える「夏」という言葉の解釈は、きっとまだどの辞書にも載っていないだろう。</p>
-                </section>
-                <section>
-                    <img src="./images/printing_factory.jpg" alt="印刷工場の廃墟">
-                    <p>友人の誘いで訪れた印刷工場跡で見た階段はところどころ腐食が進んでおり、歩みを進めるたびにそう長くないであろう踏み板の寿命を感じさせる。<br>こういった場所に来るたびに懐かしい感覚を覚えてしまうのはなぜだろう。手すりを掴んだ左手から香る酸化鉄は、逆上がりができずに半べそをかいていた時分を思い出させた。</p>
-                </section>
-                <section>
-                    <img src="./images/hisuitouge.jpg" alt="ヒスイ峠の廃墟">
-                    <p>長めに取った夏季休暇もいよいよ終わりに近づく某日、せっかく軽井沢に来ているのだからと、少し足を伸ばして翡翠峠に訪れた。<br>眼前に広がる一本道は、トンネルを抜けて感じた温度差も相まっていっそう胃のあたりをざわつかせる。<br>長らく手入れされていないであろう道だが、思った以上に歩みを阻む草が少ない理由に想像を巡らせ、一人笑みが溢れる。<br>年を取るにつれ失うものは多くあれど、廃線を歩くという高揚感は、皆いくつになっても消えないらしい。</p>
-                </section>
-            </div>
-            <h2 class="before_month"><a href="index.html"><span>7</span>月の探訪→</a></h2>
+    <main class="main-content">
+        <div class="main-content__inner common-inner">
+            <h2 class="section-header">
+                <span class="large">8</span><span class="small">月の探訪</span>
+            </h2>
+            <section class="work-list">
+                <div class="work-list__item">
+                    <img class="work-list__img" src="images/hokkaido.jpg" alt="北海道の廃墟">
+                    <p class="work-list__text">北海道を旅行するのに最適な季節は8月をおいて他にない。<br>トウモロコシ畑はいよいよ隆盛を極め、今正にその旬を謳歌しようとしている。<br>そんな黄色の恵みを背に帯広から十数キロ北に車を走らせたところ、その場所は見えてきた。<br>一面に広がる緑には、おおよそ商業的農業としての役割を全うしているであろう空間は1ヘクタールも見つからない。<br>広大な庭の持ち主と、その隙間から覗く青空が伝える「夏」という言葉の解釈は、きっとまだどの辞書にも載っていないだろう。</p>
+                </div>
+                <div class="work-list__item">
+                    <img class="work-list__img" src="images/printing_factory.jpg" alt="印刷工場の廃墟">
+                    <p class="work-list__text">友人の誘いで訪れた印刷工場跡で見た階段はところどころ腐食が進んでおり、歩みを進めるたびにそう長くないであろう踏み板の寿命を感じさせる。<br>こういった場所に来るたびに懐かしい感覚を覚えてしまうのはなぜだろう。手すりを掴んだ左手から香る酸化鉄は、逆上がりができずに半べそをかいていた時分を思い出させた。</p>
+                </div>
+                <div class="work-list__item">
+                    <img class="work-list__img" src="images/hisuitouge.jpg" alt="ヒスイ峠の廃墟">
+                    <p class="work-list__text">長めに取った夏季休暇もいよいよ終わりに近づく某日、せっかく軽井沢に来ているのだからと、少し足を伸ばして翡翠峠に訪れた。<br>眼前に広がる一本道は、トンネルを抜けて感じた温度差も相まっていっそう胃のあたりをざわつかせる。<br>長らく手入れされていないであろう道だが、思った以上に歩みを阻む草が少ない理由に想像を巡らせ、一人笑みが溢れる。<br>年を取るにつれ失うものは多くあれど、廃線を歩くという高揚感は、皆いくつになっても消えないらしい。</p>
+                </div>
+            </section>
+            <p class="old-work">
+                <a href="#"><span class="large">7</span><span class="small">月の探訪→</span></a>
+            </p> 
         </div>
-    </div>
+    </main>
 
-    <footer>
-        <small>Copyright 廃墟探訪</small>
+    <footer class="page-footer">
+        <p><small>Copyright 廃墟探訪</small></p>
     </footer>
 </body>
 </html>
