[add]メインのイントロを作成

--- a/KROWL-coding-subject-002-Windows/index.html
+++ b/KROWL-coding-subject-002-Windows/index.html
@@ -15,7 +15,12 @@
         </div>
     </header>
 
-    <main></main>
+    <main>
+        <div class="intro">
+            <h2 class="intro__title">創造しよう</h2>
+            <p class="intro__text">WorkWithは全く新しいワーキングコミュニティの形です。<br>全ての人がもっと自由に、自分の才能を最大限活用できるよう<br>働くという行為自体をデザインします。<br>アイディアとインスピレーション溢れるこの空間で<br>次の時代の価値を創造しましょう。</p>
+        </div>
+    </main>
 
     <footer></footer>
 </body>
