--- a/KROWL-coding-subject-002-Windows/index.html
+++ b/KROWL-coding-subject-002-Windows/index.html
@@ -22,6 +22,12 @@
         </div>
     </main>
 
-    <footer></footer>
+    <footer class="page-footer">
+        <p class="page-footer__copyright"><small>Copyright WorkWith. Inc</small></p>
+        <div class="page-footer__link">
+            <a href="#">お問い合わせ</a>
+            <a href="#">プライバシーポリシー</a>
+        </div>
+    </footer>
 </body>
 </html>
