[add]使い方セクション追加

--- a/KROWL-coding-subject-002-Windows/index.html
+++ b/KROWL-coding-subject-002-Windows/index.html
@@ -20,6 +20,56 @@
             <h2 class="intro__title">創造しよう</h2>
             <p class="intro__text">WorkWithは全く新しいワーキングコミュニティの形です。<br>全ての人がもっと自由に、自分の才能を最大限活用できるよう<br>働くという行為自体をデザインします。<br>アイディアとインスピレーション溢れるこの空間で<br>次の時代の価値を創造しましょう。</p>
         </div>
+
+        <section class="usage-section">
+            <h2 class="usage-section__title section-title">「働く」をデザインする</h2>
+            <div class="usage-section__inner common-inner">
+                <div class="photo-text-block">
+                    <div class="photo-text-block__image">
+                        <!-- <img src="images/img-working.jpg" alt="集中して作業をする人"> -->
+                    </div>
+                    <div class="photo-text-block__text">
+                        <h3>集中しよう</h3>
+                        <p>集中は創造に直結します。<br>WorkWithはあなたがクリエイティブに没頭できる場所を提供するため、160人を収容可能な空間に趣の異なる8種類のデスクとチェアを用意しました。<br>今日の気分に合う場所がきっと見つかります。</p>
+                    </div>
+                </div>
+                <div class="photo-text-block">
+                    <div class="photo-text-block__image">
+                        <!-- <img src="images/img-meeting_room.jpg" alt="会議室"> -->
+                    </div>
+                    <div class="photo-text-block__text">
+                        <h3>アイディアを深めよう</h3>
+                        <p>会話は相乗効果を生みます。<br>WorkWithは大小様々なサイズの会議室を各フロアに設置しています。<br>数人で行うブレインストーミングから、20人規模で行うプロジェクトの報告会まで、チームの生産性を最大化する空間を提供します。</p>
+                    </div>
+                </div>
+                <div class="photo-text-block">
+                    <div class="photo-text-block__image">
+                        <!-- <img src="images/img-drip_machine.jpg" alt="ドリップマシーン"> -->
+                    </div>
+                    <div class="photo-text-block__text">
+                        <h3>休憩にお供しましょう</h3>
+                        <p>時に良いアイディアは良いコーヒーブレイクの上に生まれます。疲れた時、煮詰まった時は一杯のコーヒーで気分をリフレッシュしましょう。<br>WorkWithは最新のドリップマシーンを4台導入しています。コーヒー、エスプレッソ、紅茶、ココア、カフェインレスの飲み物も、もちろん用意しています。</p>
+                    </div>
+                </div>
+                <div class="photo-text-block">
+                    <div class="photo-text-block__image">
+                        <!-- <img src="images/img-bar_w2.jpg" alt="Bar W2"> -->
+                    </div>
+                    <div class="photo-text-block__text">
+                        <h3>お疲れ様です<br>ちょっと一杯、あなたと乾杯</h3>
+                        <p>帰る前に1パイントのビールはいかがでしょう。<br>Bar W2は17時から23時までオープンしています。<br>今日の自分を労って、WorkWithで出会った新しいビジネスを祝して、乾杯しましょう。</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="company-section">
+            <h2 class="company-section__title section-title">導入企業様</h2>
+            
+            <div class="company-section__inner common-inner">
+                
+            </div>
+        </section>
     </main>
 
     <footer class="page-footer">
