--- a/KROWL-coding-subject-002-Windows/index.html
+++ b/KROWL-coding-subject-002-Windows/index.html
@@ -65,19 +65,26 @@
 
         <section class="company-section">
             <h2 class="company-section__title section-title">導入企業様</h2>
-            
+            <p class="company-section__text">WorkWithは福利厚生の一貫として多くの企業様に導入いただいております。<br>お得な法人様向けプランもありますのでお気軽にお問い合わせください。</p>
             <div class="company-section__inner common-inner">
-                
+                <div class="company-logo__block">
+                    <div class="company-logo"><img src="./images/logo-company01.svg" alt="ロゴ1"></div>
+                    <div class="company-logo"><img src="./images/logo-company02.svg" alt="ロゴ2"></div>
+                    <div class="company-logo"><img src="./images/logo-company03.svg" alt="ロゴ3"></div>
+                    <div class="company-logo"><img src="./images/logo-company04.svg" alt="ロゴ4"></div>
+                </div>
             </div>
         </section>
     </main>
 
     <footer class="page-footer">
         <p class="page-footer__copyright"><small>Copyright WorkWith. Inc</small></p>
-        <div class="page-footer__link">
-            <a href="#">お問い合わせ</a>
-            <a href="#">プライバシーポリシー</a>
-        </div>
+        <nav class="page-footer__nav">
+            <ul>
+                <li><a href="#">お問い合わせ</a></li>
+                <li><a href="#">プライバシーポリシー</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
