add:メインビジュアル作成

--- a/KROWL-coding-subject-003-Windows/index.html
+++ b/KROWL-coding-subject-003-Windows/index.html
@@ -12,7 +12,14 @@
 </head>
 <body>
     <header class="page-header">
-
+        <div class="page-header__inner">
+            <h1 class="page-header__title typo-bold">
+                <span class="black-belt">データマーケティングの</span><br>
+                <span class="black-belt">未来をつくる</span>
+            </h1>
+            <p class="page-header__logo"><img src="images/logo-datamania.png" alt="datamania"></p>
+            <p class="page-header__campaign"><a href="#" class="typo-bold">今なら<br>初月無料</a></p>
+        </div>
     </header>
 
     <main>
